--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,18 +11,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
         android:gravity="start"
         android:text="@string/question_text"
-        android:textSize="28sp"
+        android:textSize="25sp"
         android:textStyle="bold" />
 
     <EditText
         android:id="@+id/input_edit_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_margin="15dp"
         android:padding="10dp"
         android:minHeight="48dp"
         android:ems="15"
@@ -35,14 +35,17 @@
         android:id="@+id/add_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
         android:text="@string/add_button"
+        android:drawableLeft="@drawable/add_icon"
         android:textColor="@color/material_dynamic_neutral30" />
 
     <ListView
         android:id="@+id/todo_list_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="fill"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp" />
 
