--- a/app/src/main/res/layout/todo.xml
+++ b/app/src/main/res/layout/todo.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<!--To-do List Item Layout-->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -6,6 +8,7 @@
     android:clickable="true"
     android:focusable="true">
 
+    <!--To-do Checkbox-->
     <CheckBox
         android:id="@+id/task_check_box"
         android:layout_width="wrap_content"
@@ -13,6 +16,7 @@
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true" />
 
+    <!--To-do Items-->
     <TextView
         android:id="@+id/task_text_view"
         android:layout_width="wrap_content"
@@ -22,6 +26,7 @@
         android:layout_centerVertical="true"
         android:textSize="18sp" />
 
+    <!--Remove Button-->
     <ImageButton
         android:id="@+id/remove_button"
         android:layout_width="wrap_content"
@@ -30,9 +35,7 @@
         android:layout_centerVertical="true"
         android:backgroundTint="@color/white"
         android:src="@drawable/delete_icon"
-
-        tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck"
- />
+        tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck" />
 
 </RelativeLayout>
 
